feat: course modules field
